20210920_formation_devops_online/Ingress/classIngress.yaml
--- create the classs name befotre starting ingress.yaml
# download api https://kubernetes.github.io/ingress-nginx/deploy/#bare-metal

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
