20210920_formation_devops_online/Ingress/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'nginx-test-1'
spec:
  selector: # au niveau du pod
    matchLabels:
       app: 'nginx1' #'nginx-test-1'
  template:
    metadata:
      labels:
        app: 'nginx1' #'nginx-test-1'
    spec:
      containers:
        - name: nginx
          image: nginx #registry.gitlab.onlineterroir.com/omega/public-reg/nginx:latest
          volumeMounts:
          - name: config-volume
            mountPath: /usr/share/nginx/html
      volumes:
        - name: config-volume
          configMap:
            name: nginx-test-1
            items:
            - key: "test-value"
              path: "index.html"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'nginx-test-2'
spec:
  selector:
    matchLabels:
       app: 'nginx2' #'nginx-test-2'
  template:
   metadata:
    labels:
       app: 'nginx2' #'nginx-test-2'
   spec:
     containers:
      - name: nginx
        image: nginx #registry.gitlab.onlineterroir.com/omega/public-reg/nginx:latest
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html
     volumes:
      - name: config-volume
        configMap:
          name: nginx-test-2
#a          items:
#             - key: 
#            - key: "test-value"
#              path: "index.html"
#            - key: "nginx.conf"
#	       path: "nginx.conf"	
---
