20210920_formation_devops_online/Ingress/deployment_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment1
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx
        image: nginx #registry.gitlab.onlineterroir.com/omega/public-reg/nginx:latest
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: config-vol
      volumes:
        - name: config-vol
          configMap:
            name: game-demo1
            items:
            - key: player_initial_lives
              path: index.html
              
              
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx
        image: nginx #registry.gitlab.onlineterroir.com/omega/public-reg/nginx:latest
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: config-vol
      volumes:
        - name: config-vol
          configMap:
            name: game-demo2
            items:
            - key: player_initial_lives
              path: index.html
              
              
---
