20210920_formation_devops_online/Ingress/serviceIp.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service1
  labels:
    app: nginx
spec:
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx1

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
  labels:
    app: nginx
spec:
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx2
---
