20210920_formation_devops_online/Ingress/ingress.yaml
--- create the classs name 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
  - host: game1.foo.org
    http:
      paths:
      - path: /game1
        pathType: Prefix
        backend:
          service:
            name: nginx-service1
            port:
              number: 80
      - path: /game2
        pathType: Prefix
        backend:
          service:
            name: nginx-service2
            port:
              number: 80
  ingressClassName: nginx
---
